# robot_movement_interface

./: README.md  robot_movement_command_message_format_table.ods
dependencies/: README
dependencies/ur_description/urdf/: ur10.urdf.xacro  ur10_gripper_robot.urdf.xacro  ur5.urdf.xacro
dnb_tf/: CMakeLists.txt  package.xml
dnb_tf/scripts/: publishtest.py  transformation.py
dnb_tf/srv/: Transform.srv
iiwa_driver/: NOTICE  README
iiwa_driver/ros/: CMakeLists.txt  package.xml
iiwa_driver/ros/config/: config.yaml
iiwa_driver/ros/launch/: start.launch  start_moveit.launch  start_moveit_sim.launch  start_sim.launch  start_with_urdf.launch
iiwa_driver/ros/scripts/: actionizer.py  iiwa_commander.py  iiwa_commander_sim.py  iiwa_essentials.py  iiwa_essentials_robot_movement.py  iiwa_moveit.py
iiwa_driver/ros/srv/: StringCommand.srv
iiwa_driver/sunrise/: README  ROS_driver.java  RoboticsAPI.data.xml
robot_movement_interface/: CMakeLists.txt  README  package.xml
robot_movement_interface/action/: Commands.action
robot_movement_interface/launch/: actionizer.launch
robot_movement_interface/msg/: Command.msg  CommandList.msg  EulerFrame.msg  Result.msg
robot_movement_interface/scripts/: actionizer.py
robot_movement_interface/srv/: GetIO.srv  SetFloat.srv  SetIO.srv
ur_driver/: CMakeLists.txt  NOTICE  README  package.xml
ur_driver/action/: DigIO.action  DigIOArray.action
ur_driver/cfg/: ur_driver_config.yaml  ur_driver_config_sim.yaml  ur_egl90_driver_config_sim.yaml
ur_driver/include/: command.h  connector.h  driver.h  dummy.h  utils.h
ur_driver/launch/: ur10_egl90_sim.launch  ur10_gripper_sim.launch  ur10_real.launch  ur10_sim.launch  ur5_real.launch  ur5_sim.launch
ur_driver/msg/: PoseRotVector.msg
ur_driver/scripts/: egl90_sim_publisher.py  joint_trajectory_action.py
ur_driver/src/: command.cpp  connector.cpp  driver.cpp  dummy.cpp  main.cpp  utils.cpp
