<?xml version="1.0"?>
<package format="2">

  <name>robot_movement_interface</name>
  <version>1.0.0</version>
  <description>Message definition of the Robot Movement Interface</description>
  <maintainer email="paq@ipa.fhg.de">Pablo Quilez Velilla</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>

  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
