<?xml version="1.0"?>
<package>
  <name>ur_driver</name>
  <version>1.0.0</version>
  <description>Universal Robots generic Robot Movement Interface driver</description>
  <maintainer email="Pablo.Quilez.Velilla@ipa.fraunhofer.de">Pablo Quilez</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>robot_movement_interface</build_depend>
  <build_depend>message_generation</build_depend>
  
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>robot_movement_interface</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
